@@ -4,7 +4,9 @@ zeit.content.article changes
 2.8.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Change the way asset interfaces are registered. This fixes isolation problems
+  during tests (#6712).
+
 
 
 2.8.0 (2009-12-18)
